# pooch-dataverse

./: .gitlab-ci.yml  CITATION.cff  COPYING.md  FILESTRUCTURE.md  LICENSE.md  README.md  TODO.md  dataverse_reposiory.py  pyproject.toml
doc/: api.rst  conf.py  index.rst
notebooks/: demo.ipynb
pooch_dataverse/: repository.py
src/pooch_dataverse/: repository.py  utils.py
tests/: test_pooch_dataverse.py
tests/unit/: test_pooch_dataverse.py  test_repository.py
